--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 			<div class="logo"><img src="images/icon-128.png"/></div>
 			
 			<div class="btns">
-				<button type="button">Open Sidebar</button>
+				<button type="button" id="sidebarBtn">Open Sidebar</button>
 			</div>
 		</div>
 	</header>
